--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "appwrite": "^17.0.2",
     "framer-motion": "^12.7.3",
+    "lucide-react": "^0.503.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
