--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "appwrite": "^17.0.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
     "react-tag-autocomplete": "^7.5.0",
     "react-toastify": "^11.0.5"
   },
